# ProgrammingExam

./: CMakeLists.txt  README.md  resources.qrc
Base/: main.cpp
Base/Controller/: main_controller.cpp  main_controller.h
Base/Helpers/: helpers.h  styles.h
Base/Model/: model.cpp  model.h
Base/View/: audioplayer.cpp  audioplayer.h  settings.cpp  settings.h  view.cpp  view.h
